--- a/article/salt/about/index.html
+++ b/article/salt/about/index.html
@@ -3,13 +3,13 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>シンプルなHugoブログテーマ「Salt」とは？ | シンプルなHugoブログテーマ「Salt」</title>
+<title>Hugoブログテーマ「Salt」とは？ | Hugoブログテーマ「Salt」</title>
 <meta name=description content="「Salt」はシンプルなブログを低コストで作成できる を目標にしたHugo用テーマです。名前の通り、できるだけ素材そのものを引き出せるようなシンプルなデザイン・レイアウトにしました。 実際にSaltでできることについて紹介したいと思います 1. レスポンシブデザイン対応 PCとSP表示に対応しています。 デフォルトで横幅600pxをデフォルトにしていますが、任意のサイズに変更できます。 2. サイトカラーを自分の好き">
-<meta property="og:title" content="シンプルなHugoブログテーマ「Salt」とは？ | シンプルなHugoブログテーマ「Salt」">
+<meta property="og:title" content="Hugoブログテーマ「Salt」とは？ | Hugoブログテーマ「Salt」">
 <meta property="og:description" content="「Salt」はシンプルなブログを低コストで作成できる を目標にしたHugo用テーマです。名前の通り、できるだけ素材そのものを引き出せるようなシンプルなデザイン・レイアウトにしました。 実際にSaltでできることについて紹介したいと思います 1. レスポンシブデザイン対応 PCとSP表示に対応しています。 デフォルトで横幅600pxをデフォルトにしていますが、任意のサイズに変更できます。 2. サイトカラーを自分の好き"><meta property="og:image" content="https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_1200x630_fill_q75_h2_box_center_3.webp"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/article/salt/about/">
-<meta property="og:site_name" content="シンプルなHugoブログテーマ「Salt」">
+<meta property="og:site_name" content="Hugoブログテーマ「Salt」">
 <meta property="og:type" content="article">
-<meta name=twitter:title content="シンプルなHugoブログテーマ「Salt」とは？ | シンプルなHugoブログテーマ「Salt」">
+<meta name=twitter:title content="Hugoブログテーマ「Salt」とは？ | Hugoブログテーマ「Salt」">
 <meta name=twitter:description content="「Salt」はシンプルなブログを低コストで作成できる を目標にしたHugo用テーマです。名前の通り、できるだけ素材そのものを引き出せるようなシンプルなデザイン・レイアウトにしました。 実際にSaltでできることについて紹介したいと思います 1. レスポンシブデザイン対応 PCとSP表示に対応しています。 デフォルトで横幅600pxをデフォルトにしていますが、任意のサイズに変更できます。 2. サイトカラーを自分の好き"><meta name=twitter:image content="https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_1200x630_fill_q75_h2_box_center_3.webp">
 <meta name=twitter:card content="summary_large_image"><meta name=robots content="index,follow">
 <meta name=googlebot content="index,follow">
@@ -29,7 +29,7 @@
 <div class=partials__header>
 <div class=partials__header__title>
 <a href=https://hugo-theme-salt.okdyy75.com>
-シンプルなHugoブログテーマ「Salt」
+Hugoブログテーマ「Salt」
 </a>
 <div id=hamburger class="spShow close partials__header__hamburger">
 <div class=partials__header__hamburger__line></div>
@@ -75,7 +75,7 @@
 </li>
 <li>/</li>
 <li>
-シンプルなHugoブログテーマ「Salt」とは？
+Hugoブログテーマ「Salt」とは？
 </li>
 </ol>
 <div class="pcShow single__article__date">
@@ -83,7 +83,7 @@
  / <i class="fas fa-sync-alt"></i>2021-09-12
 </div>
 </div>
-<h1 class=single__article__title>シンプルなHugoブログテーマ「Salt」とは？</h1>
+<h1 class=single__article__title>Hugoブログテーマ「Salt」とは？</h1>
 <div class="spShow single__article__date">
 <i class="far fa-calendar-alt"></i>2021-09-12
  / <i class="fas fa-sync-alt"></i>2021-09-12
@@ -91,27 +91,27 @@
 <section class=single__article__shareLinks>
 <ul class=partials__shareLinks>
 <li class=partials__shareLinks__item>
-<a href="http://twitter.com/intent/tweet?url=https%3a%2f%2fhugo-theme-salt.okdyy75.com%2farticle%2fsalt%2fabout%2f&text=%e3%82%b7%e3%83%b3%e3%83%97%e3%83%ab%e3%81%aaHugo%e3%83%96%e3%83%ad%e3%82%b0%e3%83%86%e3%83%bc%e3%83%9e%e3%80%8cSalt%e3%80%8d%e3%81%a8%e3%81%af%ef%bc%9f" target=_blank title=Tweet class=partials__shareLinks__itemLink--twitter>
+<a href="http://twitter.com/intent/tweet?url=https%3a%2f%2fhugo-theme-salt.okdyy75.com%2farticle%2fsalt%2fabout%2f&text=Hugo%e3%83%96%e3%83%ad%e3%82%b0%e3%83%86%e3%83%bc%e3%83%9e%e3%80%8cSalt%e3%80%8d%e3%81%a8%e3%81%af%ef%bc%9f" target=_blank title=Tweet class=partials__shareLinks__itemLink--twitter>
 <i class="fab fa-twitter"></i>Twitter
 </a>
 </li>
 <li class=partials__shareLinks__item>
-<a href="http://www.facebook.com/sharer.php?u=https%3a%2f%2fhugo-theme-salt.okdyy75.com%2farticle%2fsalt%2fabout%2f&t=%e3%82%b7%e3%83%b3%e3%83%97%e3%83%ab%e3%81%aaHugo%e3%83%96%e3%83%ad%e3%82%b0%e3%83%86%e3%83%bc%e3%83%9e%e3%80%8cSalt%e3%80%8d%e3%81%a8%e3%81%af%ef%bc%9f" target=_blank title=Facebook class=partials__shareLinks__itemLink--facebook>
+<a href="http://www.facebook.com/sharer.php?u=https%3a%2f%2fhugo-theme-salt.okdyy75.com%2farticle%2fsalt%2fabout%2f&t=Hugo%e3%83%96%e3%83%ad%e3%82%b0%e3%83%86%e3%83%bc%e3%83%9e%e3%80%8cSalt%e3%80%8d%e3%81%a8%e3%81%af%ef%bc%9f" target=_blank title=Facebook class=partials__shareLinks__itemLink--facebook>
 <i class="fab fa-facebook"></i>Facebook
 </a>
 </li>
 <li class=partials__shareLinks__item>
-<a href="http://b.hatena.ne.jp/add?mode=confirm&url=https%3a%2f%2fhugo-theme-salt.okdyy75.com%2farticle%2fsalt%2fabout%2f&title=%e3%82%b7%e3%83%b3%e3%83%97%e3%83%ab%e3%81%aaHugo%e3%83%96%e3%83%ad%e3%82%b0%e3%83%86%e3%83%bc%e3%83%9e%e3%80%8cSalt%e3%80%8d%e3%81%a8%e3%81%af%ef%bc%9f" target=_blank title=hatena class=partials__shareLinks__itemLink--hatena>
+<a href="http://b.hatena.ne.jp/add?mode=confirm&url=https%3a%2f%2fhugo-theme-salt.okdyy75.com%2farticle%2fsalt%2fabout%2f&title=Hugo%e3%83%96%e3%83%ad%e3%82%b0%e3%83%86%e3%83%bc%e3%83%9e%e3%80%8cSalt%e3%80%8d%e3%81%a8%e3%81%af%ef%bc%9f" target=_blank title=hatena class=partials__shareLinks__itemLink--hatena>
 はてブ
 </a>
 </li>
 <li class=partials__shareLinks__item>
-<a href="http://getpocket.com/edit?url=https%3a%2f%2fhugo-theme-salt.okdyy75.com%2farticle%2fsalt%2fabout%2f&title=%e3%82%b7%e3%83%b3%e3%83%97%e3%83%ab%e3%81%aaHugo%e3%83%96%e3%83%ad%e3%82%b0%e3%83%86%e3%83%bc%e3%83%9e%e3%80%8cSalt%e3%80%8d%e3%81%a8%e3%81%af%ef%bc%9f" target=_blank title=pocket class=partials__shareLinks__itemLink--pocket>
+<a href="http://getpocket.com/edit?url=https%3a%2f%2fhugo-theme-salt.okdyy75.com%2farticle%2fsalt%2fabout%2f&title=Hugo%e3%83%96%e3%83%ad%e3%82%b0%e3%83%86%e3%83%bc%e3%83%9e%e3%80%8cSalt%e3%80%8d%e3%81%a8%e3%81%af%ef%bc%9f" target=_blank title=pocket class=partials__shareLinks__itemLink--pocket>
 <i class="fab fa-get-pocket"></i>Pocket
 </a>
 </li>
 <li class=partials__shareLinks__item>
-<a href=https://line.me/R/msg/text/?%e3%82%b7%e3%83%b3%e3%83%97%e3%83%ab%e3%81%aaHugo%e3%83%96%e3%83%ad%e3%82%b0%e3%83%86%e3%83%bc%e3%83%9e%e3%80%8cSalt%e3%80%8d%e3%81%a8%e3%81%af%ef%bc%9f%0D%0Ahttps%3a%2f%2fhugo-theme-salt.okdyy75.com%2farticle%2fsalt%2fabout%2f target=_blank title=line class=partials__shareLinks__itemLink--line>
+<a href=https://line.me/R/msg/text/?Hugo%e3%83%96%e3%83%ad%e3%82%b0%e3%83%86%e3%83%bc%e3%83%9e%e3%80%8cSalt%e3%80%8d%e3%81%a8%e3%81%af%ef%bc%9f%0D%0Ahttps%3a%2f%2fhugo-theme-salt.okdyy75.com%2farticle%2fsalt%2fabout%2f target=_blank title=line class=partials__shareLinks__itemLink--line>
 <i class="fab fa-line"></i>Line
 </a>
 </li>
@@ -134,7 +134,7 @@
 </a>
 </li>
 </ul>
-<img src=/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_640x640_fit_q75_h2_box_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=single__article__thumbnail>
+<img src=/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_640x640_fit_q75_h2_box_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=single__article__thumbnail>
 <div class="single__article__content markdown-body">
 <p>「Salt」は<strong>シンプルなブログを低コストで作成できる</strong></p>
 <p>を目標にしたHugo用テーマです。名前の通り、できるだけ素材そのものを引き出せるようなシンプルなデザイン・レイアウトにしました。</p>
@@ -442,9 +442,9 @@ Hugoでできること
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-シンプルなHugoブログテーマ「Salt」とは？
+Hugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
@@ -460,9 +460,9 @@ Hugoでできること
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-シンプルなHugoブログテーマ「Salt」とは？
+Hugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
