--- a/article/go/variable/index.html
+++ b/article/go/variable/index.html
@@ -3,13 +3,13 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Go言語Tips① 変数について | シンプルなHugoブログテーマ「Salt」</title>
+<title>Go言語Tips① 変数について | Hugoブログテーマ「Salt」</title>
 <meta name=description content="変数定義 Hugoのテンプレート内で{{ $title := .Title }}や{{ $title = .Title }} のようにコロンをつけたり、付けなかったりする記述を見ます。 これはgo言語の書き方の特徴で、変数を定義する場合の省略記法です title := &#34;タイトル&#34; 省略しない場合はこうなります var title string = &#34;タイトル&#34; 変数のスコープ go言語の変数スコープはif、for、switchなどのブロック内で有効です if内などで新しく変数を定義す">
-<meta property="og:title" content="Go言語Tips① 変数について | シンプルなHugoブログテーマ「Salt」">
+<meta property="og:title" content="Go言語Tips① 変数について | Hugoブログテーマ「Salt」">
 <meta property="og:description" content="変数定義 Hugoのテンプレート内で{{ $title := .Title }}や{{ $title = .Title }} のようにコロンをつけたり、付けなかったりする記述を見ます。 これはgo言語の書き方の特徴で、変数を定義する場合の省略記法です title := &#34;タイトル&#34; 省略しない場合はこうなります var title string = &#34;タイトル&#34; 変数のスコープ go言語の変数スコープはif、for、switchなどのブロック内で有効です if内などで新しく変数を定義す"><meta property="og:image" content="https://hugo-theme-salt.okdyy75.com/article/go/variable/thumbnail_hu9b587e2c909b0d2c1d0529e80b52e0ee_2906_1200x630_fill_q75_h2_box_center_3.webp"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/article/go/variable/">
-<meta property="og:site_name" content="シンプルなHugoブログテーマ「Salt」">
+<meta property="og:site_name" content="Hugoブログテーマ「Salt」">
 <meta property="og:type" content="article">
-<meta name=twitter:title content="Go言語Tips① 変数について | シンプルなHugoブログテーマ「Salt」">
+<meta name=twitter:title content="Go言語Tips① 変数について | Hugoブログテーマ「Salt」">
 <meta name=twitter:description content="変数定義 Hugoのテンプレート内で{{ $title := .Title }}や{{ $title = .Title }} のようにコロンをつけたり、付けなかったりする記述を見ます。 これはgo言語の書き方の特徴で、変数を定義する場合の省略記法です title := &#34;タイトル&#34; 省略しない場合はこうなります var title string = &#34;タイトル&#34; 変数のスコープ go言語の変数スコープはif、for、switchなどのブロック内で有効です if内などで新しく変数を定義す"><meta name=twitter:image content="https://hugo-theme-salt.okdyy75.com/article/go/variable/thumbnail_hu9b587e2c909b0d2c1d0529e80b52e0ee_2906_1200x630_fill_q75_h2_box_center_3.webp">
 <meta name=twitter:card content="summary_large_image"><meta name=robots content="index,follow">
 <meta name=googlebot content="index,follow">
@@ -29,7 +29,7 @@
 <div class=partials__header>
 <div class=partials__header__title>
 <a href=https://hugo-theme-salt.okdyy75.com>
-シンプルなHugoブログテーマ「Salt」
+Hugoブログテーマ「Salt」
 </a>
 <div id=hamburger class="spShow close partials__header__hamburger">
 <div class=partials__header__hamburger__line></div>
@@ -409,9 +409,9 @@ Hugoでできること
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-シンプルなHugoブログテーマ「Salt」とは？
+Hugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
@@ -427,9 +427,9 @@ Hugoでできること
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-シンプルなHugoブログテーマ「Salt」とは？
+Hugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
