--- a/article/salt/custom-figure/index.html
+++ b/article/salt/custom-figure/index.html
@@ -3,13 +3,13 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>画像のリサイズ・トリミング可能な自作ショートコード | シンプルなHugoブログテーマ「Salt」</title>
+<title>画像のリサイズ・トリミング可能な自作ショートコード | Hugoブログテーマ「Salt」</title>
 <meta name=description content="このテーマ内で画像のリサイズ・トリミングができる「custom-figure」というショートコードを作成しました。 使い方 Hugo標準のfigureショートコードの機能をそのまま使えます HugoのImage Processingで使えるResize、Fit、Fillが使えます Image Processingについてはこちらをチェック https://gohugo.io/content-management/image-processing/ {{< custom-figure src=&#34;image.png&#34; title=&#34;Resize スイカ&#34; Resize=&#34;320x180&#34; >}} {{< custom-figure src=&#34;image.png&#34; title=&#34;Fit スイカ&#34; Fit=&#34;320x180&#34; >}} {{< custom-figure src=&#34;image.png&#34; title=&#34;Fill スイカ&q">
-<meta property="og:title" content="画像のリサイズ・トリミング可能な自作ショートコード | シンプルなHugoブログテーマ「Salt」">
+<meta property="og:title" content="画像のリサイズ・トリミング可能な自作ショートコード | Hugoブログテーマ「Salt」">
 <meta property="og:description" content="このテーマ内で画像のリサイズ・トリミングができる「custom-figure」というショートコードを作成しました。 使い方 Hugo標準のfigureショートコードの機能をそのまま使えます HugoのImage Processingで使えるResize、Fit、Fillが使えます Image Processingについてはこちらをチェック https://gohugo.io/content-management/image-processing/ {{< custom-figure src=&#34;image.png&#34; title=&#34;Resize スイカ&#34; Resize=&#34;320x180&#34; >}} {{< custom-figure src=&#34;image.png&#34; title=&#34;Fit スイカ&#34; Fit=&#34;320x180&#34; >}} {{< custom-figure src=&#34;image.png&#34; title=&#34;Fill スイカ&q"><meta property="og:image" content="https://hugo-theme-salt.okdyy75.com/article/salt/custom-figure/thumbnail_huabbb313cfc6fe0189548b2f94140ad9f_14559_1200x630_fill_q75_h2_box_center_3.webp"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/article/salt/custom-figure/">
-<meta property="og:site_name" content="シンプルなHugoブログテーマ「Salt」">
+<meta property="og:site_name" content="Hugoブログテーマ「Salt」">
 <meta property="og:type" content="article">
-<meta name=twitter:title content="画像のリサイズ・トリミング可能な自作ショートコード | シンプルなHugoブログテーマ「Salt」">
+<meta name=twitter:title content="画像のリサイズ・トリミング可能な自作ショートコード | Hugoブログテーマ「Salt」">
 <meta name=twitter:description content="このテーマ内で画像のリサイズ・トリミングができる「custom-figure」というショートコードを作成しました。 使い方 Hugo標準のfigureショートコードの機能をそのまま使えます HugoのImage Processingで使えるResize、Fit、Fillが使えます Image Processingについてはこちらをチェック https://gohugo.io/content-management/image-processing/ {{< custom-figure src=&#34;image.png&#34; title=&#34;Resize スイカ&#34; Resize=&#34;320x180&#34; >}} {{< custom-figure src=&#34;image.png&#34; title=&#34;Fit スイカ&#34; Fit=&#34;320x180&#34; >}} {{< custom-figure src=&#34;image.png&#34; title=&#34;Fill スイカ&q"><meta name=twitter:image content="https://hugo-theme-salt.okdyy75.com/article/salt/custom-figure/thumbnail_huabbb313cfc6fe0189548b2f94140ad9f_14559_1200x630_fill_q75_h2_box_center_3.webp">
 <meta name=twitter:card content="summary_large_image"><meta name=robots content="index,follow">
 <meta name=googlebot content="index,follow">
@@ -29,7 +29,7 @@
 <div class=partials__header>
 <div class=partials__header__title>
 <a href=https://hugo-theme-salt.okdyy75.com>
-シンプルなHugoブログテーマ「Salt」
+Hugoブログテーマ「Salt」
 </a>
 <div id=hamburger class="spShow close partials__header__hamburger">
 <div class=partials__header__hamburger__line></div>
@@ -406,9 +406,9 @@ Hugoでできること
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-シンプルなHugoブログテーマ「Salt」とは？
+Hugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
@@ -424,9 +424,9 @@ Hugoでできること
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-シンプルなHugoブログテーマ「Salt」とは？
+Hugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
