--- a/article/sample/small-thumbnail/index.html
+++ b/article/sample/small-thumbnail/index.html
@@ -3,13 +3,13 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>小さいサムネイル記事 | シンプルなHugoブログテーマ「Salt」</title>
+<title>小さいサムネイル記事 | Hugoブログテーマ「Salt」</title>
 <meta name=description content="小さいサムネイルの場合の記事です 120x120です">
-<meta property="og:title" content="小さいサムネイル記事 | シンプルなHugoブログテーマ「Salt」">
+<meta property="og:title" content="小さいサムネイル記事 | Hugoブログテーマ「Salt」">
 <meta property="og:description" content="小さいサムネイルの場合の記事です 120x120です"><meta property="og:image" content="https://hugo-theme-salt.okdyy75.com/article/sample/small-thumbnail/thumbnail_hu23d368fffdbc956785c13b257e99c985_3362_1200x630_fill_q75_h2_box_center_3.webp"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/article/sample/small-thumbnail/">
-<meta property="og:site_name" content="シンプルなHugoブログテーマ「Salt」">
+<meta property="og:site_name" content="Hugoブログテーマ「Salt」">
 <meta property="og:type" content="article">
-<meta name=twitter:title content="小さいサムネイル記事 | シンプルなHugoブログテーマ「Salt」">
+<meta name=twitter:title content="小さいサムネイル記事 | Hugoブログテーマ「Salt」">
 <meta name=twitter:description content="小さいサムネイルの場合の記事です 120x120です"><meta name=twitter:image content="https://hugo-theme-salt.okdyy75.com/article/sample/small-thumbnail/thumbnail_hu23d368fffdbc956785c13b257e99c985_3362_1200x630_fill_q75_h2_box_center_3.webp">
 <meta name=twitter:card content="summary_large_image"><meta name=robots content="index,follow">
 <meta name=googlebot content="index,follow">
@@ -29,7 +29,7 @@
 <div class=partials__header>
 <div class=partials__header__title>
 <a href=https://hugo-theme-salt.okdyy75.com>
-シンプルなHugoブログテーマ「Salt」
+Hugoブログテーマ「Salt」
 </a>
 <div id=hamburger class="spShow close partials__header__hamburger">
 <div class=partials__header__hamburger__line></div>
@@ -308,9 +308,9 @@ Hugoでできること
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-シンプルなHugoブログテーマ「Salt」とは？
+Hugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
@@ -326,9 +326,9 @@ Hugoでできること
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-シンプルなHugoブログテーマ「Salt」とは？
+Hugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
