deploy: 53bc7cbec91a89fc010b570921a1df6c1fe77160

--- a/pickups/index.html
+++ b/pickups/index.html
@@ -15,7 +15,7 @@
 <meta name=generator content="Hugo 0.88.1">
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
 <link rel=canonical href=https://hugo-theme-salt.okdyy75.com/pickups/>
-<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.1d33b297a39f3893083bfddd2f64298845c82640446cb8da30d214eb9ee7bebc.css>
+<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.856ebcb6112251e25b688c3a2ea980094bdd07f7a6fef5d894efdffacaa7384f.css>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css media=print onload="this.media='all'">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LR5GBHW5M5"></script>
 <script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-LR5GBHW5M5',{anonymize_ip:!1})}</script>
@@ -56,12 +56,42 @@ Hugoブログテーマ「Salt」
 <div class=content>
 <main class=main>
 <div class=main__inner>
-<section class=list>
-<div class=list__inner>
-<div class=list__titleWrapper>
-<h1 class=list__title>Pickups</h1>
-</div>
-<div class=list__articleCardList>
+<section class=terms>
+<div class=terms__inner>
+<h1 class=terms__title>Pickups</h1>
+<div class=terms__list>
+<h2 class=terms__list__title>sidebar</h2>
+<ul class=terms__list__pages>
+<li class=terms__list__pageItem>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/>Hugoを使い始めた人に捧げるTips12選</a>
+</li>
+</ul>
+<ul class=terms__list__pages>
+<li class=terms__list__pageItem>
+<a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/>Hugoブログテーマ「Salt」とは？</a>
+</li>
+</ul>
+<ul class=terms__list__pages>
+<li class=terms__list__pageItem>
+<a href=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/>サイト内ブログカードを作る自作ショートコード</a>
+</li>
+</ul>
+<ul class=terms__list__pages>
+<li class=terms__list__pageItem>
+<a href=https://hugo-theme-salt.okdyy75.com/article/salt/custom-figure/>画像のリサイズ・トリミング可能な自作ショートコード</a>
+</li>
+</ul>
+<h2 class=terms__list__title>top</h2>
+<ul class=terms__list__pages>
+<li class=terms__list__pageItem>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/about/>Hugoでできること</a>
+</li>
+</ul>
+<ul class=terms__list__pages>
+<li class=terms__list__pageItem>
+<a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/>Hugoブログテーマ「Salt」とは？</a>
+</li>
+</ul>
 </div>
 </div>
 </section>
