deploy: fb0fdb56013cddff04fc948f5b3fb9cdd6d6bf22

--- a/article/sample/markdown/index.html
+++ b/article/sample/markdown/index.html
@@ -271,12 +271,14 @@ end
 hoge
 ___
 hoge
+
 ---
 </code></pre><p>hoge</p>
 <hr>
 <p>hoge</p>
 <hr>
-<h2 id=hoge>hoge</h2>
+<p>hoge</p>
+<hr>
 <h1 id=lists>Lists</h1>
 <h2 id=ul-箇条書きリスト>Ul 箇条書きリスト</h2>
 <p>ハイフン<code>-</code>、プラス<code>+</code>、アスタリスク<code>*</code>のいずれかを先頭に記述します。<br>
@@ -406,6 +408,8 @@ hoge
 </tr>
 </tbody>
 </table>
+</div>
+<div class=single__article__comment>
 </div>
 </article>
 <div class=single__navigation>
@@ -736,6 +740,27 @@ Hugo
 </ul>
 </nav>
 </div>
+<div class=partials__sidebar__card>
+<h3 class=partials__sidebar__title>
+アーカイブ
+</h3>
+<nav class=partials__sidebar__archive>
+<ul class=partials__sidebar__archive__yearList>
+<li class="close archive-accordion partials__sidebar__archive__yearItem">
+<div class=partials__sidebar__archive__yearItemTitle>2021年</div>
+<div class="archive-accordion-child-wrapper partials__sidebar__archive__monthListWrapper">
+<ul class="archive-accordion-child partials__sidebar__archive__monthList">
+<li class="archive-accordion-child partials__sidebar__archive__monthItem">
+<a href=/archives/2021%E5%B9%B49%E6%9C%88 class=partials__sidebar__archive__monthItemLink>
+2021年9月（12）
+</a>
+</li>
+</ul>
+</div>
+</li>
+</nav>
+</div>
+<script>document.querySelectorAll('.archive-accordion').forEach(function(a){a.addEventListener('click',function(a){if(a.target.tagName==='A')return;a.currentTarget.classList.toggle('open'),a.currentTarget.classList.toggle('close'),a.currentTarget.classList.contains('open')?a.currentTarget.querySelector('.archive-accordion-child-wrapper').style.height=a.currentTarget.querySelector('.archive-accordion-child').offsetHeight+'px':a.currentTarget.querySelector('.archive-accordion-child-wrapper').style.height='0'})})</script>
 </div>
 </div>
 </aside>
