--- a/pickups/sidebar/index.html
+++ b/pickups/sidebar/index.html
@@ -16,7 +16,7 @@
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
 <link rel=canonical href=https://hugo-theme-salt.okdyy75.com/pickups/sidebar/>
 <link rel=alternate type=application/rss+xml href=https://hugo-theme-salt.okdyy75.com/pickups/sidebar/index.xml title=Hugoブログテーマ「Salt」>
-<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.9e57182edd13736d060d40e8a1b0491438a8bca313c0daa0ff7d788e20e85bab.css>
+<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.52cc1080ef0cf1eec91ebef68fe553b3556fb861126733b5b48383191d228813.css>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css media=print onload="this.media='all'">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LR5GBHW5M5"></script>
 <script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-LR5GBHW5M5',{anonymize_ip:!1})}</script>
@@ -139,6 +139,15 @@ shortcode
 <h4 class=partials__articleCard__title>
 Hugoブログテーマ「Salt」とは？
 </h4>
+<div class=partials__articleCard__detail>
+<a href=/categories/Salt%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9>
+<i class="fas fa-folder"></i>&nbsp;Saltの使い方
+</a>
+<div class=partials__articleCard__detail__center></div>
+<div>
+<i class="fas fa-clock"></i>&nbsp;2021-09-17
+</div>
+</div>
 <ul class=partials__tagList>
 <li class=partials__tagList__item>
 <a href=/tags/Hugo class=partials__tagList__itemLink>
@@ -163,6 +172,15 @@ Hugoブログテーマ「Salt」とは？
 <h4 class=partials__articleCard__title>
 Hugoを使い始めた人に捧げるTips12選
 </h4>
+<div class=partials__articleCard__detail>
+<a href=/categories/Hugo>
+<i class="fas fa-folder"></i>&nbsp;Hugo
+</a>
+<div class=partials__articleCard__detail__center></div>
+<div>
+<i class="fas fa-clock"></i>&nbsp;2021-09-16
+</div>
+</div>
 <ul class=partials__tagList>
 <li class=partials__tagList__item>
 <a href=/tags/Hugo class=partials__tagList__itemLink>
@@ -187,6 +205,15 @@ Hugoを使い始めた人に捧げるTips12選
 <h4 class=partials__articleCard__title>
 サイト内ブログカードを作る自作ショートコード
 </h4>
+<div class=partials__articleCard__detail>
+<a href=/categories/Salt%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9>
+<i class="fas fa-folder"></i>&nbsp;Saltの使い方
+</a>
+<div class=partials__articleCard__detail__center></div>
+<div>
+<i class="fas fa-clock"></i>&nbsp;2021-09-12
+</div>
+</div>
 <ul class=partials__tagList>
 <li class=partials__tagList__item>
 <a href=/tags/Hugo class=partials__tagList__itemLink>
@@ -211,6 +238,15 @@ Hugoを使い始めた人に捧げるTips12選
 <h4 class=partials__articleCard__title>
 画像のリサイズ・トリミング可能な自作ショートコード
 </h4>
+<div class=partials__articleCard__detail>
+<a href=/categories/Salt%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9>
+<i class="fas fa-folder"></i>&nbsp;Saltの使い方
+</a>
+<div class=partials__articleCard__detail__center></div>
+<div>
+<i class="fas fa-clock"></i>&nbsp;2021-09-11
+</div>
+</div>
 <ul class=partials__tagList>
 <li class=partials__tagList__item>
 <a href=/tags/Hugo class=partials__tagList__itemLink>
