deploy: 52b46d51d037eeff472509e78b28d34a235f7ad9

--- a/article/go/variable/index.html
+++ b/article/go/variable/index.html
@@ -148,14 +148,14 @@ Go言語Tips① 変数について
 </li>
 </ol>
 <div class="pcShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-09-13
- / <i class="fas fa-sync-alt"></i>2021-09-13
+<i class="far fa-clock"></i>2021-09-13
+ / <i class="fas fa-history"></i>2021-09-13
 </div>
 </div>
 <h1 class=single__article__title>Go言語Tips① 変数について</h1>
 <div class="spShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-09-13
- / <i class="fas fa-sync-alt"></i>2021-09-13
+<i class="far fa-clock"></i>2021-09-13
+ / <i class="fas fa-history"></i>2021-09-13
 </div>
 <section class=single__article__shareLinks>
 <ul class=partials__shareLinks>
