--- a/article/hugo/about/index.html
+++ b/article/hugo/about/index.html
@@ -148,14 +148,14 @@ Hugoでできること
 </li>
 </ol>
 <div class="pcShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-09-12
- / <i class="fas fa-sync-alt"></i>2021-09-12
+<i class="far fa-clock"></i>2021-09-12
+ / <i class="fas fa-history"></i>2021-09-12
 </div>
 </div>
 <h1 class=single__article__title>Hugoでできること</h1>
 <div class="spShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-09-12
- / <i class="fas fa-sync-alt"></i>2021-09-12
+<i class="far fa-clock"></i>2021-09-12
+ / <i class="fas fa-history"></i>2021-09-12
 </div>
 <section class=single__article__shareLinks>
 <ul class=partials__shareLinks>
