--- a/article/hugo/tips/index.html
+++ b/article/hugo/tips/index.html
@@ -148,14 +148,14 @@ Hugoを使い始めた人に捧げるTips12選
 </li>
 </ol>
 <div class="pcShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-09-16
- / <i class="fas fa-sync-alt"></i>2021-09-16
+<i class="far fa-clock"></i>2021-09-16
+ / <i class="fas fa-history"></i>2021-09-16
 </div>
 </div>
 <h1 class=single__article__title>Hugoを使い始めた人に捧げるTips12選</h1>
 <div class="spShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-09-16
- / <i class="fas fa-sync-alt"></i>2021-09-16
+<i class="far fa-clock"></i>2021-09-16
+ / <i class="fas fa-history"></i>2021-09-16
 </div>
 <section class=single__article__shareLinks>
 <ul class=partials__shareLinks>
