--- a/article/salt/about/index.html
+++ b/article/salt/about/index.html
@@ -148,14 +148,14 @@ Hugoブログテーマ「Salt」とは？
 </li>
 </ol>
 <div class="pcShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-09-12
- / <i class="fas fa-sync-alt"></i>2021-09-17
+<i class="far fa-clock"></i>2021-09-12
+ / <i class="fas fa-history"></i>2021-09-17
 </div>
 </div>
 <h1 class=single__article__title>Hugoブログテーマ「Salt」とは？</h1>
 <div class="spShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-09-12
- / <i class="fas fa-sync-alt"></i>2021-09-17
+<i class="far fa-clock"></i>2021-09-12
+ / <i class="fas fa-history"></i>2021-09-17
 </div>
 <section class=single__article__shareLinks>
 <ul class=partials__shareLinks>
