--- a/article/salt/custom-figure/index.html
+++ b/article/salt/custom-figure/index.html
@@ -148,14 +148,14 @@ shortcode
 </li>
 </ol>
 <div class="pcShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-09-11
- / <i class="fas fa-sync-alt"></i>2021-09-11
+<i class="far fa-clock"></i>2021-09-11
+ / <i class="fas fa-history"></i>2021-09-11
 </div>
 </div>
 <h1 class=single__article__title>画像のリサイズ・トリミング可能な自作ショートコード</h1>
 <div class="spShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-09-11
- / <i class="fas fa-sync-alt"></i>2021-09-11
+<i class="far fa-clock"></i>2021-09-11
+ / <i class="fas fa-history"></i>2021-09-11
 </div>
 <section class=single__article__shareLinks>
 <ul class=partials__shareLinks>
