--- a/article/sample/small-thumbnail/index.html
+++ b/article/sample/small-thumbnail/index.html
@@ -148,14 +148,14 @@ shortcode
 </li>
 </ol>
 <div class="pcShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-09-10
- / <i class="fas fa-sync-alt"></i>2021-09-10
+<i class="far fa-clock"></i>2021-09-10
+ / <i class="fas fa-history"></i>2021-09-10
 </div>
 </div>
 <h1 class=single__article__title>小さいサムネイル記事</h1>
 <div class="spShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-09-10
- / <i class="fas fa-sync-alt"></i>2021-09-10
+<i class="far fa-clock"></i>2021-09-10
+ / <i class="fas fa-history"></i>2021-09-10
 </div>
 <section class=single__article__shareLinks>
 <ul class=partials__shareLinks>
