--- a/information/index.html
+++ b/information/index.html
@@ -141,14 +141,14 @@ shortcode
 </li>
 </ol>
 <div class="pcShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-08-31
- / <i class="fas fa-sync-alt"></i>2021-08-31
+<i class="far fa-clock"></i>2021-08-31
+ / <i class="fas fa-history"></i>2021-08-31
 </div>
 </div>
 <h1 class=single__article__title>お知らせ</h1>
 <div class="spShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-08-31
- / <i class="fas fa-sync-alt"></i>2021-08-31
+<i class="far fa-clock"></i>2021-08-31
+ / <i class="fas fa-history"></i>2021-08-31
 </div>
 <div class="single__article__content markdown-body">
 <p>2021年8月31日<br>
