--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -141,14 +141,14 @@ shortcode
 </li>
 </ol>
 <div class="pcShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-08-31
- / <i class="fas fa-sync-alt"></i>2021-08-31
+<i class="far fa-clock"></i>2021-08-31
+ / <i class="fas fa-history"></i>2021-08-31
 </div>
 </div>
 <h1 class=single__article__title>プライバシーポリシー</h1>
 <div class="spShow single__article__date">
-<i class="far fa-calendar-alt"></i>2021-08-31
- / <i class="fas fa-sync-alt"></i>2021-08-31
+<i class="far fa-clock"></i>2021-08-31
+ / <i class="fas fa-history"></i>2021-08-31
 </div>
 <div class="single__article__content markdown-body">
 <p>このサイトはHugoブログテーマ「Salt」（以下、「当サイト」といいます。）は、本ウェブサイト上で提供するサービスにおけるユーザーの個人情報の取扱いについて、以下のとおりプライバシーポリシー（以下、「本ポリシー」といいます。）を定めます。</p>
