--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -143,35 +143,40 @@ shortcode
 </ol>
 <div class="pcShow single__article__date">
 <i class="far fa-clock"></i>2021-08-31
- / <i class="fas fa-history"></i>2021-08-31
+ / <i class="fas fa-history"></i>2021-10-04
 </div>
 </div>
 <h1 class=single__article__title>プライバシーポリシー</h1>
 <div class="spShow single__article__date">
 <i class="far fa-clock"></i>2021-08-31
- / <i class="fas fa-history"></i>2021-08-31
+ / <i class="fas fa-history"></i>2021-10-04
 </div>
 <div class="single__article__content markdown-body">
 <p>このサイトはHugoブログテーマ「Salt」（以下、「当サイト」といいます。）は、本ウェブサイト上で提供するサービスにおけるユーザーの個人情報の取扱いについて、以下のとおりプライバシーポリシー（以下、「本ポリシー」といいます。）を定めます。</p>
-<h2 id=個人情報の利用目的>個人情報の利用目的</h2>
+<h3 id=個人情報の利用目的>個人情報の利用目的</h3>
 <p>当サイトが個人情報を収集・利用する目的は、以下のとおりです。</p>
 <ul>
 <li>当サイトサービスの提供・運営のため</li>
 <li>不正・不当な目的でサービスを利用しようとするユーザーの特定をし、ご利用をお断りするため</li>
 </ul>
-<h2 id=個人情報の第三者開示>個人情報の第三者開示</h2>
+<h3 id=個人情報の第三者開示>個人情報の第三者開示</h3>
 <p>当サイトは次に掲げる場合を除いて、あらかじめユーザーの同意を得ることなく、第三者に個人情報を提供することはありません。</p>
 <ul>
 <li>本人の了承を得た場合</li>
 <li>国の機関もしくは地方公共団体またはその委託を受けた者が法令の定める事務を遂行することに対して協力する必要がある場合</li>
 </ul>
-<h2 id=プライバシーポリシーの変更>プライバシーポリシーの変更</h2>
+<h3 id=プライバシーポリシーの変更>プライバシーポリシーの変更</h3>
 <ul>
 <li>本ポリシーの内容は、法令その他本ポリシーに別段の定めのある事項を除いて、ユーザーに通知することなく、変更することができるものとします。</li>
 <li>当サイトが別途定める場合を除いて、変更後のプライバシーポリシーは、本ウェブサイトに掲載したときから効力を生じるものとします。</li>
 </ul>
 <br>
-<h1 id=アクセス解析ツールについて>アクセス解析ツールについて</h1>
+<h2 id=広告について>広告について</h2>
+<p>当ブログでは、第三者配信の広告サービス（Googleアドセンス）を利用しており、ユーザーの興味に応じた商品やサービスの広告を表示するため、クッキー（Cookie）を使用しております。<br>
+クッキーを使用することで当サイトはお客様のコンピュータを識別できるようになりますが、お客様個人を特定できるものではありません。</p>
+<p>Cookieを無効にする方法やGoogleアドセンスに関する詳細は「<a href="https://policies.google.com/technologies/ads?gl=jp">広告 – ポリシーと規約 – Google</a>」をご確認ください。</p>
+<br>
+<h2 id=アクセス解析ツールについて>アクセス解析ツールについて</h2>
 <p>当ブログでは、Googleによるアクセス解析ツール「Googleアナリティクス」を利用しています。このGoogleアナリティクスはトラフィックデータの収集のためにクッキー（Cookie）を使用しております。トラフィックデータは匿名で収集されており、個人を特定するものではありません。</p>
 <p>この機能はCookieを無効にすることで収集を拒否できますので、お使いのブラウザの設定をご確認ください。
 この規約に関して、詳しくは<a href=https://marketingplatform.google.com/about/analytics/terms/jp/>こちら</a>を御覧ください。</p>
